# solo-enterprise-agentregistry-workshop

./: .gitignore  001-installation.md  CHANGELOG.md  README.md  e2e-agentcore.sh  e2e-test.sh  issue.md
assets/agents/bankingsupport/: Dockerfile  README.md  agent.yaml  pyproject.toml
assets/agents/econresearch-agw/: Dockerfile  README.md  agent.yaml  pyproject.toml  requirements.txt
assets/agents/econresearch-agw/econresearch_agw/: agent-card.json  agent.py  gateway.py
assets/agents/econresearch-agw/econresearch_agw/.adk/: session.db
assets/keycloak/: agentregistry-enterprise.json  keycloak-deployment.yaml  kustomization.yaml  setup-realm.sh
assets/keycloak-airgap/: kustomization.yaml
assets/prompts/: agent-safety-guardrails.yaml  kubernetes-triage-system-prompt.yaml
assets/skills/changelog/: SKILL.md  (+1 more)
e2e/: agentcore.sh
labs/access-control/: README.md  access-policies.md  approval-workflows.md  audit-logging.md
labs/catalog/: changelog-skill.md  field-rfe-skill.md  prompts.md
labs/installation/: image-list.md  mirror-images.sh
labs/mcp/: deepwiki-mcp.md  fred-mcp.md  in-cluster-mcp.md  local-stdio-mcp.md  mcp-client-ui.md  playwright-mcp.md  solo-docs-mcp.md
labs/runtimes/: agentcore-01-integration.md  agentcore-02-create-agents.md  agentcore-03-deploy-agents.md  agentcore-04-agentgateway-llm-mcp.md  agentcore-04-approval-onboarding.md  agentcore-05-agentgateway-llm-mcp.md  agentcore-cleanup.md  aws-bedrock-agentcore.md
mcp-client/: Homepage.py  README.md  cluster.py  mcp_client.py  requirements.txt  run.sh
mcp-client/.streamlit/: config.toml
(+42 files in other folders)
